--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 col-md-4">
-          <img src="./1.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <img src="./2.png" alt="" class="reveal img-responsive reveal-content image-center">
           
             <a href="#" class="social-round-icon fa-icon" title="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
