--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 col-md-4">
-          <img src="./2.png" alt="" class="reveal img-responsive reveal-content image-center">
+          <img src="http://wx1.sinaimg.cn/large/007dlXA1gy1g2se8et4ruj30go0p0gmm.jpg" alt="" class="reveal img-responsive reveal-content image-center">
           
             <a href="#" class="social-round-icon fa-icon" title="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -94,7 +94,7 @@
         </div>
        
         <div class="col-xs-12 col-md-4">
-          <img src="" alt="" class="reveal img-responsive reveal-content image-center">
+          <img src="http://ws3.sinaimg.cn/large/007dlXA1gy1g2sebhjklmj30yi1bc0v3.jpg" alt="" class="reveal img-responsive reveal-content image-center">
           <br>
 		  <br>
 		  <br>
